main/default/objects/Quick_Check_Question__c/Quick_Check_Question__c.object-meta.xml
<CustomObject>
    <description>Quick Check Question</description>
    <label>Quick Check Question</label>
    <nameField>
        <displayFormat>QCQ{000000}</displayFormat>
        <label>Quick Check Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quick Check Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>