main/default/objects/Quick_Check_Question__c/fields/Answers__c.field-meta.xml
<CustomField>
    <fullName>Answers__c</fullName>
    <description>Answer Options</description>
    <label>Answer Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>