main/default/objects/Quick_Check_Question__c/fields/Check_Answers__c.field-meta.xml
<CustomField>
    <fullName>Check_Answers__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check Answers</description>
    <label>Check Answers</label>
    <type>Checkbox</type>
</CustomField>