main/default/objects/Quick_Check_Question__c/fields/Completion_Message__c.field-meta.xml
<CustomField>
    <fullName>Completion_Message__c</fullName>
    <description>Completion Message</description>
    <label>Completion Message</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>