main/default/objects/Quick_Check_Question__c/fields/Correct_Answer_Message__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_Message__c</fullName>
    <description>Correct Answer Message</description>
    <label>Correct Answer Message</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>