main/default/objects/Quick_Check_Question__c/fields/Correct_Answer_s__c.field-meta.xml
<CustomField>
    <fullName>Correct_Answer_s__c</fullName>
    <description>Correct Answer(s)</description>
    <label>Correct Answer(s)</label>
    <type>TextArea</type>
</CustomField>