main/default/objects/Quick_Check_Question__c/fields/Incorrect_Answer_Message__c.field-meta.xml
<CustomField>
    <fullName>Incorrect_Answer_Message__c</fullName>
    <description>Incorrect Answer Message</description>
    <label>Incorrect Answer Message</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>