main/default/objects/Quick_Check_Question__c/fields/Question_Type__c.field-meta.xml
<CustomField>
    <fullName>Question_Type__c</fullName>
    <description>Type of question</description>
    <label>Question Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Multi-select</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Radio buttons</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>