main/default/objects/Quick_Check_Question__c/fields/Quick_Check__c.field-meta.xml
<CustomField>
    <fullName>Quick_Check__c</fullName>
    <description>Links to Quick Check</description>
    <label>Quick Check</label>
    <referenceTo>Quick_Check__c</referenceTo>
    <relationshipLabel>Quick Check Questions</relationshipLabel>
    <relationshipName>Quick_Check_Questions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>