main/default/objects/Quick_Check_Question__c/fields/Required_Question__c.field-meta.xml
<CustomField>
    <fullName>Required_Question__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Required Question</description>
    <label>Required Question</label>
    <type>Checkbox</type>
</CustomField>